# wtop

./: .dockerignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  local-build-and-install.sh  remote-install.sh
.github/workflows/: build.yml  release.yml
Formula/: wtop.rb
examples/: resource_monitor.rs
src/: aggregation.rs  app.rs  docker_client.rs  main.rs  settings.rs  theme.rs  ui.rs
